--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ matrix:
           - ANDROID_API_LEVEL=28
           - ANDROID_BUILD_TOOLS_VERSION=28.0.3
       before_install:
+        - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in my-upload-key.keystore.enc -out my-upload-key.keystore -d
         - nvm install 13.10.1
         - node --version
       install:
