--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,40 @@
 matrix:
   include:
-    - # require the branch name to be master
-      if: branch = master
-      language: android
-      jdk: oraclejdk8
-      env:
-        global:
-          - ANDROID_API_LEVEL=28
-          - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-      before_install:
-        - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in android/app/my-upload-key.keystore.enc -out android/app/my-upload-key.keystore -d
-        - nvm install 13.10.1
-        - node --version
-      install:
-        - npm install
-      android:
-        licenses:
-          - 'android-sdk-preview-license-.+'
-          - 'android-sdk-license-.+'
-          - 'google-gdk-license-.+'
-        components:
-          - tools
-          - platform-tools
-          # The BuildTools version used by your project
-          - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-          # The SDK version used to compile your project
-          - android-$ANDROID_API_LEVEL
-          # Additional components
-          - extra-google-google_play_services
-          - extra-google-m2repository
-          - extra-android-m2repository
-          - addon-google_apis-google-$ANDROID_API_LEVEL
-      script:
-        - cd ci-cd && ./bundleandroid.sh
-        - npm install
-        - npm run upload
-    if: branch = develop
-    language: nodejs
+    # require the branch name to be master
+    if: branch = master
+    language: android
+    jdk: oraclejdk8
+    env:
+      global:
+        - ANDROID_API_LEVEL=28
+        - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    before_install:
+      - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in android/app/my-upload-key.keystore.enc -out android/app/my-upload-key.keystore -d
+      - nvm install 13.10.1
+      - node --version
+    install:
+      - npm install
+    android:
+      licenses:
+        - 'android-sdk-preview-license-.+'
+        - 'android-sdk-license-.+'
+        - 'google-gdk-license-.+'
+      components:
+        - tools
+        - platform-tools
+        # The BuildTools version used by your project
+        - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+        # The SDK version used to compile your project
+        - android-$ANDROID_API_LEVEL
+        # Additional components
+        - extra-google-google_play_services
+        - extra-google-m2repository
+        - extra-android-m2repository
+        - addon-google_apis-google-$ANDROID_API_LEVEL
+    script:
+      - cd ci-cd && ./bundleandroid.sh
+      - npm install
+      - npm run upload
+  if: branch = develop
+  language: nodejs
     # do a build
