--- a/.travis.yml
+++ b/.travis.yml
@@ -19,27 +19,27 @@ matrix:
       - ccencrypt info.txt -K $KNOWN_SECRET
       - cat info.txt.cpt | base64
       - npm install
-    android:
-      licenses:
-        - 'android-sdk-preview-license-.+'
-        - 'android-sdk-license-.+'
-        - 'google-gdk-license-.+'
-      components:
-        - tools
-        - platform-tools
-        # The BuildTools version used by your project
-        - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-        # The SDK version used to compile your project
-        - android-$ANDROID_API_LEVEL
-        # Additional components
-        - extra-google-google_play_services
-        - extra-google-m2repository
-        - extra-android-m2repository
-        - addon-google_apis-google-$ANDROID_API_LEVEL
-    script:
-      - cd ci-cd && ./bundleandroid.sh
-      - npm install
-      - npm run upload
-  if: branch = develop
-  language: nodejs
+#    android:
+#      licenses:
+#        - 'android-sdk-preview-license-.+'
+#        - 'android-sdk-license-.+'
+#        - 'google-gdk-license-.+'
+#      components:
+#        - tools
+#        - platform-tools
+#        # The BuildTools version used by your project
+#        - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+#        # The SDK version used to compile your project
+#        - android-$ANDROID_API_LEVEL
+#        # Additional components
+#        - extra-google-google_play_services
+#        - extra-google-m2repository
+#        - extra-android-m2repository
+#        - addon-google_apis-google-$ANDROID_API_LEVEL
+#    script:
+#      - cd ci-cd && ./bundleandroid.sh
+#      - npm install
+#      - npm run upload
+#  if: branch = develop
+#  language: nodejs
     # do a build
